# Skyscraper-Invariant

./: .gitignore  CMakeLists.txt  README.md  arrangement_test.cpp  filt_landscape_from_sky.cpp  hn_diagonal_fibres.py  hn_filtration.cpp  hnf_at_origin.cpp  hnf_main.cpp  hnf_visualise.py  hnf_visualise_highslope.py  large_induced_indecomposables.cpp  main.cpp  pres_to_quiver.cpp  random_uni_B1.cpp  visualise_hn_filtration.py
example_files/indecomps/: stable_in_torus_1.scc  torus_dim2_2.scc  torus_dim2_3.scc  torus_dim3_1.scc  torus_dim3_2.scc  torus_dim4_1_2x2_snapped.scc  torus_dim4_1_3x3_snapped.scc  torus_dim4_1_5x5_snapped.scc
example_files/indecomps_at/: hypoxic_dim3_1.scc  hypoxic_dim3_2.scc  hypoxic_dim3_3.scc  hypoxic_dim3_4.scc  hypoxic_dim3_5.scc  hypoxic_dim4_1.scc  hypoxic_dim4_2.scc  hypoxic_dim5_1.scc  stable_example_paper.scc  torus_dim2_1.scc  torus_dim3_1_0.txt  torus_dim4_1.scc  torus_dim4_1_4x4_snapped.scc
example_files/indecomps_at/random/: full_extracted.txt  opt_extracted.txt  origin_full_experiments.md  origin_optimised_experiments.md  random_uni_B1_2_1.scc  random_uni_B1_2_2.scc  random_uni_B1_2_3.scc  random_uni_B1_2_4.scc  random_uni_B1_2_5.scc  random_uni_B1_3_1.scc  random_uni_B1_3_2.scc  random_uni_B1_3_3.scc  random_uni_B1_3_4.scc  random_uni_B1_3_5.scc  random_uni_B1_4_1.scc  random_uni_B1_4_2.scc  random_uni_B1_4_3.scc  random_uni_B1_4_4.scc  random_uni_B1_4_5.scc  random_uni_B1_5_1.scc  random_uni_B1_5_2.scc  random_uni_B1_5_3.scc  random_uni_B1_5_4.scc  random_uni_B1_5_5.scc  random_uni_B1_6_1.scc  random_uni_B1_6_2.scc  random_uni_B1_6_3.scc  random_uni_B1_6_4.scc  random_uni_B1_6_5.scc  random_uni_B1_7_1.scc  random_uni_B1_7_2.scc  random_uni_B1_7_3.scc  random_uni_B1_7_4.scc  random_uni_B1_7_5.scc  random_uni_B1_8_1.scc  random_uni_B1_8_2.scc  random_uni_B1_8_3.scc  random_uni_B1_8_4.scc  random_uni_B1_8_5.scc
example_files/indecomps_at/random/large/: origin_opt_experiments.md  random_uni_B1_10_1.scc  random_uni_B1_10_2.scc  random_uni_B1_10_3.scc  random_uni_B1_10_4.scc  random_uni_B1_10_5.scc  random_uni_B1_9_1.scc  random_uni_B1_9_2.scc  random_uni_B1_9_3.scc  random_uni_B1_9_4.scc  random_uni_B1_9_5.scc
example_files/indecomps_at/torus1_induced/: 2_0.scc  2_1.scc  2_2.scc  2_3.scc  2_4.scc  2_5.scc  2_6.scc  2_7.scc  2_8.scc  2_9.scc
example_files/indecomps_at/torus2_induced/: 2_0.scc  2_1.scc  2_2.scc  2_3.scc  2_4.scc  2_5.scc  2_6.scc  2_7.scc  2_8.scc  2_9.scc  3_0.scc  3_1.scc  3_2.scc  3_3.scc  3_4.scc  3_5.scc  3_6.scc  full_extracted.txt  opt_extracted.txt  origin_full_experiments.md  origin_opt_experiments.md
example_files/indecomps_at/torus3_induced/: 2_6.scc  3_0.scc  3_8.scc  5_1.scc  6_0.scc  7_0.scc  7_2.scc  extracted_times_full.txt  extracted_times_opt.txt  origin_full_experiments.md  origin_optimised_experiments.md  quiver_translation.txt
example_files/indecomps_at/torus3_induced/quiver/: 2_0_2x2.txt_output_F_2.txt  2_0_2x2.txt_output_Q.txt  2_0_3x3.txt_output_F_2.txt  2_0_3x3.txt_output_Q.txt  2_0_4x4.txt_output_F_2.txt  2_0_4x4.txt_output_Q.txt  2_0_5x5.txt  2_0_5x5.txt_output_Q.txt  2_0_6x6.txt_output_Q.txt  2_1_2x2.txt_output_F_2.txt  2_1_2x2.txt_output_Q.txt  2_1_3x3.txt_output_F_2.txt  2_1_3x3.txt_output_Q.txt  2_1_4x4.txt_output_F_2.txt  2_1_4x4.txt_output_Q.txt  2_1_5x5.txt_output_F_2.txt  2_1_5x5.txt_output_Q.txt  2_1_6x6.txt_output_Q.txt  2_2_2x2.txt_output_F_2.txt  2_2_2x2.txt_output_Q.txt  2_2_3x3.txt_output_F_2.txt  2_2_3x3.txt_output_Q.txt  2_2_4x4.txt  2_2_4x4.txt_output_F_2.txt  2_2_4x4.txt_output_Q.txt  2_2_5x5.txt  2_2_5x5.txt_output_F_2.txt  2_2_5x5.txt_output_Q.txt  2_2_6x6.txt  2_2_6x6.txt_output_Q.txt  2_6_2x2.txt_output_F_2.txt  2_6_2x2.txt_output_Q.txt  2_6_3x3.txt_output_F_2.txt  2_6_3x3.txt_output_Q.txt  2_6_4x4.txt_output_F_2.txt  2_6_4x4.txt_output_Q.txt  2_6_5x5.txt  2_6_5x5.txt_output_F_2.txt  2_6_5x5.txt_output_Q.txt  2_6_6x6.txt_output_Q.txt  (+127 more)
example_files/presentations/: torus1.scc  torus1.sccsum  torus2.scc  torus2.sccsum  two_circles.scc  two_circles_2x2.txt
example_files/presentations/torus3_induced/: 2_0.scc  2_1.scc  2_2.scc  3_9.scc  4_0.scc  4_9.scc  5_0.scc  6_4.scc  6_5.scc  6_8.scc  6_9.scc  origin_optimised_experiments.md  quiver_experiments.md
example_files/presentations/torus3_induced/quiver/: 2_0_2x2.txt_output_F_2.txt  2_0_2x2.txt_output_Q.txt  2_0_3x3.txt_output_F_2.txt  2_0_3x3.txt_output_Q.txt  2_0_4x4.txt_output_F_2.txt  2_0_5x5.txt_output_Q.txt  2_0_6x6.txt  2_0_6x6.txt_output_F_2.txt  2_1_2x2.txt_output_F_2.txt  2_1_3x3.txt  2_1_3x3.txt_output_F_2.txt  2_1_4x4.txt_output_F_2.txt  2_1_4x4.txt_output_Q.txt  2_1_5x5.txt_output_F_2.txt  2_1_6x6.txt_output_Q.txt  2_2_2x2.txt_output_F_2.txt  2_2_2x2.txt_output_Q.txt  2_2_3x3.txt_output_F_2.txt  2_2_4x4.txt_output_F_2.txt  2_2_5x5.txt_output_F_2.txt  2_2_6x6.txt_output_Q.txt  2_6_2x2.txt  2_6_2x2.txt_output_F_2.txt  2_6_3x3.txt_output_F_2.txt  2_6_4x4.txt  2_6_4x4.txt_output_F_2.txt  2_6_5x5.txt_output_F_2.txt  2_6_5x5.txt_output_Q.txt  2_6_6x6.txt  2_6_6x6.txt_output_F_2.txt  3_0_2x2.txt_output_F_2.txt  3_0_2x2.txt_output_Q.txt  3_0_3x3.txt_output_F_2.txt  3_0_3x3.txt_output_Q.txt  3_0_4x4.txt_output_F_2.txt  3_0_4x4.txt_output_Q.txt  3_0_5x5.txt_output_Q.txt  3_0_6x6.txt  3_8_2x2.txt  (+96 more)
example_files/quiver_reps/: torus_dim2_1_2x2.txt
example_files/sky/: torus_dim2_1.sky  torus_dim2_2.sky  torus_dim3_1.sky  two_circles.sky
include/: file_reader.hpp  filt_landscape.cpp  filt_landscape.hpp  hn_filtration.hpp  hnf.hpp  hnf_at.hpp  hnf_interface.hpp  hnf_uni_b1.hpp  subdivision.hpp  uni_b1.hpp
src/: file_reader.cpp  filt_landscape.cpp  hnf.cpp  hnf_at.cpp  hnf_uni_b1.cpp  subdivision.cpp  uni_b1.cpp
tests/: arrangement_test.cpp  cheng_alg_Q_experiments.md  extract_times.sh  random_uni_B1.sh  run_arrangement_on_folder.sh  run_at_origin_on_folder.sh  run_cheng_on_folder.sh  run_quiver_on_folder.sh  run_sky_on_folder.sh  sky_increasing_grid.sh
visualisation/: filtered_hilbert_function.py  hnf_landscape.py  hnf_visualise_highslope.py  hnf_visualise_lowslope.py  visualise_sky_landscape.py
(+60 files in other folders)
